[gd_scene load_steps=3 format=3 uid="uid://f612u4jmp21q"]

[ext_resource type="Script" path="res://scenes/ui/limits.gd" id="1_lpm7x"]
[ext_resource type="Theme" uid="uid://y2a6okj5k8kv" path="res://resources/ui.tres" id="2_54n4o"]

[node name="Score" type="CanvasLayer"]
script = ExtResource("1_lpm7x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.074
anchor_bottom = 0.071
offset_right = -102.08
offset_bottom = -36.68
theme = ExtResource("2_54n4o")

[node name="CurrentPoints" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 90
text = "0"

[node name="Slash" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 90
text = "/"

[node name="CurrentLimit" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 90
text = "200"

[node name="NextLimit" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = "400"
